# Velocity_position_dependt

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  get_rid_of_transition.hpp  main.cpp  options.hpp
